# waveterm-mp3-player

./: .gitignore  LICENSE  PLAN.md  README.md  WIDGETS.md  pyproject.toml  widgets.example.json
src/mp3_player_waveterm/: app.py  library.py  player.py
